@startuml entityRelationshipDiagram

' visual style
hide circle

' straight lines
skinparam Linetype ortho
skinparam Nodesep 110
skinparam Ranksep 80

entity User {
    * id: <<uuid>>
    ---
    * publisher: FK<Publisher>
    * username: string
    * email: string
    * passwordHash: string
}

entity Role {
    * id: <<uuid>>
    ---
    * name: string
}

entity UserRole {
    * id: <<uuid>>
    ---
    * user: FK<User>
    * role: FK<Role>
    * newspaper: FK<Newspaper>
}

entity Newspaper { 
    * id: <<uuid>>
    ---
    * publisher: FK<Publisher>
    * name: string
}

entity Newspaper_copy { 
    * id: <<uuid>>
    ---
    * issueNr: autoincrement
    * date: datetime
    * newspaper: FK<Newspaper>
}

entity Article { 
    * id: <<uuid>>
    ---
    * newspaper_copy: FK<Newspaper_copy>
    * author: FK<User>
    * contents: string
}

entity Publisher { 
    * id: <<uuid>>
    ---
    * name: string
}

entity Comment {
    * id: <<uuid>>
    ---
    * article: FK<Article>
    * author: FK<User>
    * content: string
}

entity Category {
    * id: <<uuid>>
    ---
    * name: string
}

entity Article_category { 
    * id: <<uuid>>
    ---
    * article: FK<Article>
    * category: FK<Category>
}

Publisher ||--o{ Newspaper
Publisher |o--|{ User
User }|--|| UserRole
UserRole }|--|| Role
UserRole }|--|| Newspaper
Newspaper ||--o{ Newspaper_copy
Newspaper_copy ||--|{ Article
Article }|--|| Article_category
Article_category ||--|{ Category
Article ||--o{ Comment
Article }|--|| User
Comment }o--|| User

@enduml